{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 143,
  "lineage": "da2d2a66-dfb4-7d35-56a1-1bc700500139",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipfornat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0723d004cc9835f03",
            "domain": "vpc",
            "id": "eipalloc-0e296c427053ee447",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0db1a6976079fe001",
            "private_dns": "ip-192-168-1-130.ec2.internal",
            "private_ip": "192.168.1.130",
            "public_dns": "ec2-18-215-196-207.compute-1.amazonaws.com",
            "public_ip": "18.215.196.207",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:502434380454:instance/i-0a7401b56e7ad0f41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7401b56e7ad0f41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrakey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088304e0585f0d31a",
            "private_dns": "ip-192-168-1-167.ec2.internal",
            "private_ip": "192.168.1.167",
            "public_dns": "ec2-18-212-88-207.compute-1.amazonaws.com",
            "public_ip": "18.212.88.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb079f7f2fb01eea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b30e9a31a53c2df",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cd6da2ebe912ab93"
            ]
          },
          "dependencies": [
            "aws_vpc.terravpc",
            "aws_security_group.sgforterravpc",
            "aws_subnet.tvpc-sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:internet-gateway/igw-0df60a5bd28e1baf2",
            "id": "igw-0df60a5bd28e1baf2",
            "owner_id": "502434380454",
            "tags": {
              "Name": "tigw"
            },
            "tags_all": {
              "Name": "tigw"
            },
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:502434380454:loadbalancer/app/alb/980c4ef69665b3c7",
            "arn_suffix": "app/alb/980c4ef69665b3c7",
            "dns_name": "alb-1325891101.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:502434380454:loadbalancer/app/alb/980c4ef69665b3c7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-01b4aad4bfb35bb07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b30e9a31a53c2df"
              },
              {
                "subnet_id": "subnet-09f81f3963dab9b08"
              }
            ],
            "subnets": [
              "subnet-04b30e9a31a53c2df",
              "subnet-09f81f3963dab9b08"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0e3f40c0ac561358d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.tvpc-sub1",
            "aws_subnet.tvpc-sub2",
            "aws_vpc.terravpc",
            "aws_security_group.sgforALB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:502434380454:listener/app/alb/980c4ef69665b3c7/7253e627ec7c5b7d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:502434380454:targetgroup/Tgforalb/2337e581552664e1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:502434380454:listener/app/alb/980c4ef69665b3c7/7253e627ec7c5b7d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:502434380454:loadbalancer/app/alb/980c4ef69665b3c7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB",
            "aws_lb_target_group.Tgforalb",
            "aws_security_group.sgforALB",
            "aws_subnet.tvpc-sub1",
            "aws_subnet.tvpc-sub2",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Tgforalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:502434380454:targetgroup/Tgforalb/2337e581552664e1",
            "arn_suffix": "targetgroup/Tgforalb/2337e581552664e1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:502434380454:targetgroup/Tgforalb/2337e581552664e1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Tgforalb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:502434380454:targetgroup/Tgforalb/2337e581552664e1-20210617092349822600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:502434380454:targetgroup/Tgforalb/2337e581552664e1",
            "target_id": "i-0a7401b56e7ad0f41"
          },
          "dependencies": [
            "aws_subnet.tvpc-sub1",
            "aws_vpc.terravpc",
            "aws_instance.web_server",
            "aws_lb_target_group.Tgforalb",
            "aws_security_group.sgforterravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tnatgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e296c427053ee447",
            "id": "nat-0cbd34a725106ad66",
            "network_interface_id": "eni-0db1a6976079fe001",
            "private_ip": "192.168.1.130",
            "public_ip": "18.215.196.207",
            "subnet_id": "subnet-04b30e9a31a53c2df"
          },
          "dependencies": [
            "aws_eip.eipfornat",
            "aws_internet_gateway.tigw",
            "aws_subnet.tvpc-sub1",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_terravpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:route-table/rtb-0fb7cda35ab66eca9",
            "id": "rtb-0fb7cda35ab66eca9",
            "owner_id": "502434380454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df60a5bd28e1baf2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_terravpc"
            },
            "tags_all": {
              "Name": "rt_terravpc"
            },
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tigw",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtprivate_terravpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:route-table/rtb-098869b727228a268",
            "id": "rtb-098869b727228a268",
            "owner_id": "502434380454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cbd34a725106ad66",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtprivate_terravpc"
            },
            "tags_all": {
              "Name": "rtprivate_terravpc"
            },
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.tnatgw",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0155ee358736f1e9d",
            "route_table_id": "rtb-0fb7cda35ab66eca9",
            "subnet_id": "subnet-04b30e9a31a53c2df"
          },
          "dependencies": [
            "aws_internet_gateway.tigw",
            "aws_route_table.rt_terravpc",
            "aws_subnet.tvpc-sub1",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03815927291ab1a24",
            "route_table_id": "rtb-0fb7cda35ab66eca9",
            "subnet_id": "subnet-09f81f3963dab9b08"
          },
          "dependencies": [
            "aws_internet_gateway.tigw",
            "aws_route_table.rt_terravpc",
            "aws_subnet.tvpc-sub2",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4e135ee9b1aedb7",
            "route_table_id": "rtb-098869b727228a268",
            "subnet_id": "subnet-0ae1168c3031d0915"
          },
          "dependencies": [
            "aws_subnet.tvpc-sub1",
            "aws_subnet.tvpc-sub3",
            "aws_vpc.terravpc",
            "aws_eip.eipfornat",
            "aws_internet_gateway.tigw",
            "aws_nat_gateway.tnatgw",
            "aws_route_table.rtprivate_terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad004efa56488533",
            "route_table_id": "rtb-098869b727228a268",
            "subnet_id": "subnet-078f8dad14dd60da0"
          },
          "dependencies": [
            "aws_eip.eipfornat",
            "aws_internet_gateway.tigw",
            "aws_nat_gateway.tnatgw",
            "aws_route_table.rtprivate_terravpc",
            "aws_subnet.tvpc-sub1",
            "aws_subnet.tvpc-sub4",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgforALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:security-group/sg-01b4aad4bfb35bb07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b4aad4bfb35bb07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210616084256610800000001",
            "name_prefix": "terraform-",
            "owner_id": "502434380454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALBSG"
            },
            "tags_all": {
              "Name": "ALBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgforterravpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:security-group/sg-0cd6da2ebe912ab93",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd6da2ebe912ab93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210610040838290100000001",
            "name_prefix": "terraform-",
            "owner_id": "502434380454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terravpcSG"
            },
            "tags_all": {
              "Name": "terravpcSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tvpc-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:subnet/subnet-04b30e9a31a53c2df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-04b30e9a31a53c2df",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502434380454",
            "tags": {
              "Name": "tvpc-sub1"
            },
            "tags_all": {
              "Name": "tvpc-sub1"
            },
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tvpc-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:subnet/subnet-09f81f3963dab9b08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-09f81f3963dab9b08",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502434380454",
            "tags": {
              "Name": "tvpc-sub2"
            },
            "tags_all": {
              "Name": "tvpc-sub2"
            },
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tvpc-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:subnet/subnet-0ae1168c3031d0915",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0ae1168c3031d0915",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502434380454",
            "tags": {
              "Name": "tvpc-sub3"
            },
            "tags_all": {
              "Name": "tvpc-sub3"
            },
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tvpc-sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:subnet/subnet-078f8dad14dd60da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-078f8dad14dd60da0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502434380454",
            "tags": {
              "Name": "tvpc-sub4"
            },
            "tags_all": {
              "Name": "tvpc-sub4"
            },
            "vpc_id": "vpc-0e3f40c0ac561358d"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terravpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502434380454:vpc/vpc-0e3f40c0ac561358d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ef1c47b666d62cc5",
            "default_route_table_id": "rtb-0b5a4f336d126b581",
            "default_security_group_id": "sg-0d8d1744101e8f091",
            "dhcp_options_id": "dopt-f490a08e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e3f40c0ac561358d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b5a4f336d126b581",
            "owner_id": "502434380454",
            "tags": {
              "Name": "teeravpc"
            },
            "tags_all": {
              "Name": "teeravpc"
            }
          }
        }
      ]
    }
  ]
}